<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lvi_sam</name>
  <version>0.0.0</version>
  <description>LVI-SAM Modified: Tightly-coupled Lidar-Visual-Inertial Odometry via Smoothing and Mapping</description>
  <maintainer email="shant@mit.com">lalala</maintainer>
  <author>Tixiao Shan</author>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_index_cpp</depend>
  
  <!-- TF2 Dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- CV Bridge -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- PCL -->
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- Message Dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Message Generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Additional ROS2 Dependencies -->
  <depend>message_filters</depend>
  <depend>robot_state_publisher</depend>

  <!-- System Dependencies -->
  <depend>eigen</depend>
  <depend>libboost-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
